--- a/src/styles/Styles.scss
+++ b/src/styles/Styles.scss
@@ -216,6 +216,8 @@ figure {
   max-width: 280px;
   text-align: center;
   img {
+    width:280px;
     max-width: 100%;
+    max-height: 498px;
   }
 }
